--- a/contact.html
+++ b/contact.html
@@ -6,25 +6,30 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <title>Contact Us - Hair Dryer Shop</title>
 </head>
+
 <body>
     <div id="container">
         <header>
             <a href="index.html">
                 <img src="images/logo.jpg" alt="Hair Dryer Shop Logo" class="logo">
             </a>
-        </header>      
+        </header>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="specials.html">Specials</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="training.html">Training</a></li>
+                <li><a href="team.html">Our Team</a></li>
+
             </ul>
         </nav>
         <main>
@@ -33,14 +38,15 @@
             <p>Email us: <a href="mailto:info@hairdryershop.com">info@hairdryershop.com</a></p>
             <p>Visit us at: 3420 Southgate Rd, Ottawa, Canada</p>
             <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2948.8516496982043!2d-71.05401952473794!3d42.345686136010805!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e37a7dc2b67e7b%3A0x36ec93427cd9c5f1!2sChannel%20Center%20St%2C%20Boston%2C%20MA%2002210%2C%20USA!5e0!3m2!1sen!2sca!4v1716917278587!5m2!1sen!2sca"
-            width="600" height="450" allowfullscreen="" class="map"></iframe>
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2948.8516496982043!2d-71.05401952473794!3d42.345686136010805!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e37a7dc2b67e7b%3A0x36ec93427cd9c5f1!2sChannel%20Center%20St%2C%20Boston%2C%20MA%2002210%2C%20USA!5e0!3m2!1sen!2sca!4v1716917278587!5m2!1sen!2sca"
+                width="600" height="450" allowfullscreen="" class="map"></iframe>
         </main>
         <footer><b>
-            &copy; Copyright 2011. All Rights Reserved.<br>
-            <a href="mailto:info@hairdryershop.com">Request information</a><br>
-            [Suman Acharya] [c0933265]
-        </b></footer>
+                &copy; Copyright 2011. All Rights Reserved.<br>
+                <a href="mailto:info@hairdryershop.com">Request information</a><br>
+                [Suman Acharya] [c0933265]
+            </b></footer>
     </div>
 </body>
+
 </html>
