--- a/index.html
+++ b/index.html
@@ -6,25 +6,29 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <title>Hair Dryer Shop</title>
 </head>
+
 <body>
     <div id="container">
         <header>
             <a href="index.html">
                 <img src="images/logo.jpg" alt="Hair Dryer Shop Logo" class="logo">
             </a>
-        </header>        
+        </header>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="specials.html">Specials</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="training.html">Training</a></li>
+                <li><a href="team.html">Our Team</a></li>
             </ul>
         </nav>
         <main>
@@ -32,7 +36,7 @@
                 <h1>Welcome to Hair Dryer Shop</h1>
                 <p>Your one-stop shop for the best hair dryers in the market!</p>
             </section>
-            
+
             <section id="featured-products">
                 <h2>Featured Products</h2>
                 <div class="product">
@@ -46,7 +50,7 @@
                     <p>Perfect for on-the-go, our Compact Travel Dryer fits easily in your bag.</p>
                 </div>
             </section>
-            
+
             <section id="why-choose-us">
                 <h2>Why Choose Us</h2>
                 <ul>
@@ -63,15 +67,17 @@
                     "The best hair dryer I've ever used! My hair dries so quickly and looks amazing." - Jane D.
                 </blockquote>
                 <blockquote>
-                    "I love the Compact Travel Dryer. It's perfect for my trips and works just as well as my home dryer." - Mark S.
+                    "I love the Compact Travel Dryer. It's perfect for my trips and works just as well as my home
+                    dryer." - Mark S.
                 </blockquote>
             </section>
         </main>
         <footer><b>
-            &copy; Copyright 2011. All Rights Reserved.<br>
-            <a href="mailto:info@hairdryershop.com">Request information</a><br>
-            [Suman Acharya] [c0933265]
-        </b></footer>
+                &copy; Copyright 2011. All Rights Reserved.<br>
+                <a href="mailto:info@hairdryershop.com">Request information</a><br>
+                [Suman Acharya] [c0933265]
+            </b></footer>
     </div>
 </body>
+
 </html>
