--- a/specials.html
+++ b/specials.html
@@ -6,25 +6,29 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <title>Specials - Hair Dryer Shop</title>
 </head>
+
 <body>
     <div id="container">
         <header>
             <a href="index.html">
                 <img src="images/logo.jpg" alt="Hair Dryer Shop Logo" class="logo">
             </a>
-        </header>     
+        </header>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="specials.html">Specials</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="training.html">Training</a></li>
+                <li><a href="team.html">Our Team</a></li>
             </ul>
         </nav>
         <main>
@@ -36,10 +40,11 @@
             <p>Check out our amazing discounts on top hair dryers...</p>
         </main>
         <footer><b>
-            &copy; Copyright 2011. All Rights Reserved.<br>
-            <a href="mailto:info@hairdryershop.com">Request information</a><br>
-            [Suman Acharya] [c0933265]
-        </b></footer>
+                &copy; Copyright 2011. All Rights Reserved.<br>
+                <a href="mailto:info@hairdryershop.com">Request information</a><br>
+                [Suman Acharya] [c0933265]
+            </b></footer>
     </div>
 </body>
+
 </html>
