--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="js/script.js" defer></script>
     <title>Hair Dryer Shop</title>
 </head>
 
@@ -29,6 +30,7 @@
                 <li><a href="contact.html">Contact Us</a></li>
                 <li><a href="training.html">Training</a></li>
                 <li><a href="team.html">Our Team</a></li>
+                <li><a href="media.html">Media</a></li>
             </ul>
         </nav>
         <main>
@@ -44,11 +46,14 @@
                     <h3>SuperFast Hair Dryer</h3>
                     <p>Get salon-quality results in half the time with our SuperFast Hair Dryer.</p>
                 </div>
+                <button class="favorite-button" onclick="addToFavorites(this)">Add to Favorites</button>
+
                 <div class="product">
                     <img src="images/product2.jpg" alt="Product 2">
                     <h3>Compact Travel Dryer</h3>
                     <p>Perfect for on-the-go, our Compact Travel Dryer fits easily in your bag.</p>
                 </div>
+                <button class="favorite-button" onclick="addToFavorites(this)">Add to Favorites</button>
             </section>
 
             <section id="why-choose-us">
