--- a/specials.html
+++ b/specials.html
@@ -29,6 +29,7 @@
                 <li><a href="contact.html">Contact Us</a></li>
                 <li><a href="training.html">Training</a></li>
                 <li><a href="team.html">Our Team</a></li>
+                <li><a href="media.html">Media</a></li>
             </ul>
         </nav>
         <main>
