--- a/training.html
+++ b/training.html
@@ -30,6 +30,7 @@
                 <li><a href="contact.html">Contact Us</a></li>
                 <li><a href="training.html">Training</a></li>
                 <li><a href="team.html">Our Team</a></li>
+                <li><a href="media.html">Media</a></li>
             </ul>
         </nav>
         <main>
@@ -154,31 +155,7 @@
                         </tbody>
                     </table>
                 </article>
-                <article>
-                    <h2>Training Videos</h2>
-                    <p>Explore our collection of training videos that provide step-by-step instructions on using
-                        different types of hair dryers and styling techniques.</p>
-                    <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/eJWQd6Hgm1Y?si=V--cUn6_2RzrdxbE" frameborder="0"
-                            allowfullscreen></iframe>
-                        <p>Testing TOP Professional Hair Dryer vs DYSON!
-                        </p>
-                    </div>
-                    <div class="video-container">
-                        <iframe src="https://www.youtube.com/embed/UB-E3LduoqQ?si=zrVhKzBp-Vx8lVAT" frameborder="0"
-                            allowfullscreen></iframe>
-                        <p>Laifen Swift Hairdryer VS. Dyson Supersonic</p>
-                    </div>
-                </article>
-                <article>
-                    <h2>Downloadable Guides</h2>
-                    <p>Download our comprehensive guides that cover everything from choosing the right hair dryer to
-                        mastering advanced styling techniques.</p>
-                    <ul>
-                        <li><a href="guides/guide1.pdf" target="_blank">Guide 1</a></li>
-                        <li><a href="guides/guide2.pdf" target="_blank">Guide 2</a></li>
-                    </ul>
-                </article>
+
             </section>
         </main>
         <footer><b>
