--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <script src="js/script.js" defer></script>
     <title>Hair Dryer Shop</title>
 </head>
